--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 	      		<div class="modal-body">
 					<form id="item-info">
 						<h5>Item Name</h5>
-						<input type="text" name="itemName">
+						<input type="text" name="itemName" id="itemName">
 						<h5>Price</h5>
-						<input type="number" name="price">
+						<input type="number" name="price" id="price">
 						<h5>Description</h5>
-						<textarea name="descrip" rows="10" cols="60"></textarea>
+						<textarea name="descrip" rows="10" cols="60" id ="descrip"></textarea>
 						<h5>Picture</h5>
 						<div class="picBox"></div>
 						<input id="picData" type="file" title="add Images" accept="image/*" name="pic">
